--- a/src/iframe/toolbar/toolbar.css
+++ b/src/iframe/toolbar/toolbar.css
@@ -1,5 +1,30 @@
-.toolbar{
+.toolbar {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+}
+
+.selector-panel {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+
+.selector-panel > span {
+    width: 100%;
+    cursor: pointer;
+    font-size: 24px;
+}
+
+.link-menu-panel {
+    width: 320px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.link-menu-panel > .confirm-btn {
+    margin-left: 12px;
 }
